--- a/styles/global.css
+++ b/styles/global.css
@@ -1,5 +1,5 @@
 .container {
-  padding: 0 40px;
+  padding: 100px 60px;
 }
 
 .orange {
@@ -15,13 +15,48 @@
   font-weight: 700;
 }
 
-.green-btn {
-  background-color: var(--e2);
+div .default-input {
+  flex: 1;
+}
+
+.default-input {
+  color: var(--c1);
+  background-color: var(--e1);
   border: 0;
   border-radius: 12px;
+  opacity: 1;
+  font-size: 18px;
+  padding: 20px 30px;
+}
+
+.default-input::placeholder {
+  color: var(--c1);
+  font-weight: 600;
+}
+
+.default-input:valid {
+  background-color: var(--e2);
+}
+
+input[type="submit"] {
+  margin-top: 20px;
+}
+
+.green-btn {
+  /* animation: pulse 1.2s infinite; */
+  background-color: var(--e3);
+  border: 0;
+  border-radius: 12px;
+  box-shadow: 4px 2px 20px 6px #35b30e;
   color: var(--c1);
   font-weight: bolder;
   font-size: 24px;
   text-transform: uppercase;
   padding: 20px 15px;
+  transition: background 0.5s;
+}
+
+.green-btn:hover {
+  background: var(--e4);
+  cursor: pointer;
 }
