--- a/styles/hero.css
+++ b/styles/hero.css
@@ -1,92 +1,68 @@
-.hero-section {
+.hero {
+  align-items: end;
   background: url("../assets/img/kitchen.png") center no-repeat;
   background-size: cover;
   display: grid;
+  gap: 30px;
   grid-template-columns: 1fr 1fr;
+  justify-items: center;
   padding-top: 40px;
 }
 
-.hero-content {
+.hero__content {
   color: var(--c5);
 }
 
 .main-logo {
   text-align: center;
-  width: 160px;
+  width: 200px;
 }
 
-.hero-title {
+.hero__title {
   margin: 0 auto;
 }
 
-.hero-title {
+.hero__title {
   font-size: 18px;
   font-weight: 500;
   line-height: 1.1;
   margin-top: 6px;
 }
 
-.hero-title strong {
+.hero__title strong {
   display: block;
   font-style: italic;
   font-size: 28px;
   font-weight: 900;
 }
 
-.hero-main-content {
+.hero__main-content {
   font-size: 28px;
   font-weight: 600;
   margin-top: 30px;
   line-height: 1.3;
 }
 
-.hero-description {
+.hero__description {
   font-size: 18px;
   font-weight: 500;
   line-height: 1.3;
   margin-top: 20px;
 }
 
-.hero-form {
+.hero__form {
   display: flex;
   flex-direction: column;
   gap: 5px;
   margin-top: 20px;
 }
 
-.hero-form div {
+.hero__form div {
   display: flex;
   gap: 5px;
 }
 
-.hero-form div input {
-  flex: 1;
-}
-
-.hero-form input:not(input[type='submit']) {
-  color: var(--c1);
-  background-color: var(--c3);
-  border: 0;
-  border-radius: 12px;
-  opacity: 1;
-  font-size: 18px;
-  padding: 20px 30px;
-}
-
-.hero-form input[type="submit"] {
-  margin-top: 10px;
-}
-
-.hero-form input::placeholder {
-  color: var(--c1);
-  font-weight: 600;
-}
-
-
-.hero-image {
-  height: 80%;
-}
-
-.hero-image img {
+.hero__image {
   height: auto;
+  width: 90%;
 }
