--- a/styles/advantages.css
+++ b/styles/advantages.css
@@ -16,8 +16,7 @@
 
 .cards__container {
   display: flex;
-  justify-content: center;
-  gap: 12px;
+  justify-content: space-between;
 }
 
 .card {
@@ -26,7 +25,7 @@
   color: var(--c1);
   display: flex;
   flex-direction: column;
-  width: calc(33% - 24px);
+  width: calc(33% - 2px);
 }
 
 .card__content {
