--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,7 @@
 @import url("footer.css");
 @import url("hero.css");
 @import url("advantages.css");
+@import url("swiper.css");
 
 :root {
   --e1: #ee6c22;
@@ -61,6 +62,6 @@ li {
 
 .room-background {
   background: url("../assets/img/room.png") no-repeat;
-  background-position: 35% 4.2%;
-  background-size: 250%;
+  background-position: 35% 6.5%;
+  background-size: 230%;
 }
