--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,7 @@
 @import url("hero.css");
 @import url("advantages.css");
 @import url("swiper.css");
+@import url("presentation.css");
 
 :root {
   --e1: #ee6c22;
