--- a/styles/swiper.css
+++ b/styles/swiper.css
@@ -5,6 +5,7 @@
 
 .advantages__swiper {
   overflow: clip;
+  border-radius: 20px;
 }
 
 .swiper__card {
@@ -19,20 +20,22 @@
   text-transform: uppercase;
 }
 
-.swiper-button-next {
-  transform: scale(-1);
-}
-
 .swiper-button-prev {
   left: -25px;
 }
 
 .swiper-button-next {
+  transform: scale(-1);
   right: -25px;
 }
 
-.swiper-button-next,
-.swiper-button-prev {
+.swiper-btn:hover {
+  background: url("../assets/icons/white-arrow.svg") 15px center no-repeat;
+  background-size: 15px;
+  background-color: var(--e2);
+}
+
+.swiper-btn {
   background: url("../assets/icons/arrow.svg") 15px center no-repeat;
   background-size: 15px;
   background-color: var(--c1);
@@ -40,18 +43,19 @@
   box-shadow: 0 0 16px rgba(0, 0, 0, 0.1);
   color: var(--e1);
   position: absolute;
-  top: 50%;
+  top: 48%;
   width: 50px;
   height: 50px;
+  transition: background 0.4s;
 }
 
-.swiper-button-next::after,
-.swiper-button-prev::after {
+.swiper-btn::after {
   content: "";
 }
 
 .swiper-pagination {
   display: flex;
+  justify-content: center;
   transform: translateY(60px);
   padding: 0 120px;
 }
