--- a/styles/presentation.css
+++ b/styles/presentation.css
@@ -1,34 +1,32 @@
 .presentation {
   display: flex;
+  padding: 100px 20px;
+  justify-content: center;
+  min-height: 900px;
 }
 
 .presentation__img {
   background: url("../assets/img/kitchen2.png");
   border-radius: 20px 0 0 20px;
-  clip-path: polygon(
-    0% 0%,
-    100% 0,
-    100% 25%,
-    120% 30%,
-    100% 38%,
-    100% 100%,
-    0 100%
-  );
-  width: 66%;
+  transform: translateX(20px);
+  flex: 1;
 }
 
 .presentation__infos {
   background-color: var(--e1);
   border-radius: 0 20px 20px 0;
+  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0 100%, 0 36%, 7% 32%, 0 28%);
   color: var(--c1);
   line-height: 1.63;
   font-size: 18px;
-  padding: 50px 70px 70px 50px;
-  width: 35%;
+  transform: translateX(-20px);
+  padding: 80px 60px 120px 50px;
+  width: 30%;
 }
 
 .presentation__infos p {
   margin-top: 30px;
+  font-weight: 500;
 }
 
 .presentation__infos em {
