--- a/styles/advantages.css
+++ b/styles/advantages.css
@@ -1,10 +1,9 @@
 .advantages {
   align-items: center;
   display: flex;
-  gap: 60px;
   flex-direction: column;
+  gap: 60px;
 }
-
 .advantages__title {
   border: 3px solid var(--e1);
   border-radius: 50px;
@@ -13,12 +12,10 @@
   text-transform: uppercase;
   width: fit-content;
 }
-
 .cards__container {
   display: flex;
   justify-content: space-between;
 }
-
 .card {
   background: var(--e1);
   border-radius: 20px;
@@ -27,32 +24,32 @@
   flex-direction: column;
   width: calc(33% - 2px);
 }
-
 .card__content {
   padding: 20px 28px 30px 28px;
 }
-
 .card__img {
   border-radius: 20px 20px 0 0;
   object-fit: cover;
 }
-
 .card__title {
   font-size: 22px;
   font-weight: 800;
 }
-
 .card__text {
   font-size: 15px;
   line-height: 1.3;
   text-wrap: pretty;
 }
-
 .card__text span {
   display: block;
   margin-top: 5px;
 }
-
 .card__title ~ .card__text {
   margin-top: 12px;
+}
+.card__extra {
+  padding: 0 40px;
+}
+.card__extra .mini-card {
+  flex: 1 1 0px;
 }
