--- a/styles/global.css
+++ b/styles/global.css
@@ -1,62 +1,81 @@
 .container {
-  padding: 100px 60px;
+  padding: 100px 100px;
 }
-
 .orange {
   color: var(--e1);
 }
-
+.orange-part {
+  background: var(--e1);
+}
 .centralized {
   text-align: center;
 }
-
 .title {
   display: block;
   font-weight: 700;
 }
-
 div .default-input {
   flex: 1;
 }
-
 .default-input {
-  color: var(--c1);
   background-color: var(--e1);
   border: 0;
   border-radius: 12px;
-  opacity: 1;
+  color: var(--c1);
   font-size: 18px;
+  opacity: 1;
   padding: 20px 30px;
 }
-
 .default-input::placeholder {
   color: var(--c1);
   font-weight: 600;
 }
-
 .default-input:valid {
   background-color: var(--e2);
 }
-
 input[type="submit"] {
   margin-top: 20px;
 }
-
 .green-btn {
-  /* animation: pulse 1.2s infinite; */
   background-color: var(--e3);
   border: 0;
   border-radius: 12px;
   box-shadow: 4px 2px 20px 6px #35b30e;
   color: var(--c1);
-  font-weight: bolder;
   font-size: 24px;
-  text-transform: uppercase;
+  font-weight: bolder;
   padding: 20px 15px;
+  text-transform: uppercase;
   transition: background 0.5s;
+
+  /* animation: pulse 1.2s infinite; */
 }
 
 .green-btn:hover {
   background: var(--e4);
   cursor: pointer;
+}
+.mini-cards {
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+  margin-top: 20px;
+}
+.mini-card {
+  align-items: center;
+  background-color: var(--c1);
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  font-weight: 800;
+  gap: 6px;
+  justify-content: center;
+  padding: 10px;
+  text-transform: uppercase;
+}
+.mini-card h5 {
+  font-size: 18px;
+  font-weight: 800;
+  margin: 0 auto;
+  text-align: center;
 }
