--- a/styles/global.css
+++ b/styles/global.css
@@ -14,6 +14,19 @@
   display: block;
   font-weight: 700;
 }
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  margin-top: 20px;
+}
+
+form div {
+  display: flex;
+  gap: 5px;
+}
+
 div .default-input {
   flex: 1;
 }
@@ -78,4 +91,10 @@ input[type="submit"] {
   font-weight: 800;
   margin: 0 auto;
   text-align: center;
+  width: 80%;
+}
+
+.bubble-bg {
+  background: url("../assets/img/bubbles.png") no-repeat;
+  background-size: cover;
 }
