--- a/styles/footer.css
+++ b/styles/footer.css
@@ -2,17 +2,17 @@
   align-items: flex-end;
   background: var(--c1);
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   margin-top: 200px;
   box-shadow: 4px 4px 28px 3px var(--e1);
   margin: 200px 8px 8px 8px;
-  padding: 40px 0;
+  padding: 40px 20px;
   font-weight: 700;
-  font-size: 18px;
+  font-size: clamp(12px, 3vw, 18px);
 }
 
 .footer__logo {
-  width: clamp(100px, 40vw, 400px);
+  width: clamp(120px, 45vw, 400px);
 }
 
 .footer__link {
@@ -24,21 +24,36 @@
   margin-bottom: 12px;
 }
 
-.footer__link:nth-child() .footer__link:hover {
+.footer__link:hover {
   color: var(--e1);
   text-decoration: underline;
 }
 
 .copyright {
   text-align: center;
+  margin-bottom: 12px;
 }
 
 .copyright img {
   margin-bottom: 40px;
 }
 
+.social-media div {
+  display: flex;
+  gap: 20px;
+}
+
 @media (max-width: 1280px) {
   .footer {
+    align-items: center;
     flex-direction: column;
+  }
+
+  .copyright {
+    order: -1;
+  }
+
+  .social-media {
+    margin-top: 20px;
   }
 }
