--- a/styles/hero.css
+++ b/styles/hero.css
@@ -1,12 +1,12 @@
 .hero {
   align-items: end;
-  background: url("../assets/img/kitchen.png") -700px center no-repeat;
-  background-size: 150%;
+  background: url("../assets/img/kitchen.png") center no-repeat;
+  background-size: 100%;
   display: flex;
   gap: 30px;
-  height: 100vh;
+  min-height: 100vh;
   justify-content: space-between;
-  padding-top: 20px;
+  padding-top: 34px;
   text-align: center;
 }
 
@@ -15,7 +15,7 @@
 }
 
 .main-logo {
-  height: 100px;
+  height: 250px;
   text-align: center;
   margin-bottom: 40px;
 }
@@ -47,5 +47,5 @@
 }
 
 .hero__image {
-  width: 35%;
+  width: 50%;
 }
